--- a/index.html
+++ b/index.html
@@ -49,42 +49,42 @@
         </div>
         <div class="product-grid">
           <article class="product-card fade-up">
-            <img src="images/solar-charge.jpg" alt="Carga solar y USB" />
+            <img src="solar-charge.jpg" alt="Carga solar y USB" />
             <h3>Carga solar y USB</h3>
             <p>Aprovecha la energía del sol o recarga por USB para estar siempre listo.</p>
           </article>
           <article class="product-card fade-up">
-            <img src="images/led-light.jpg" alt="Linterna LED doble" />
+            <img src="led-light.jpg" alt="Linterna LED doble" />
             <h3>Linterna LED doble (3 modos)</h3>
             <p>Iluminación poderosa con modos SOS, intermitente y luz constante.</p>
           </article>
           <article class="product-card fade-up">
-            <img src="images/waterproof.jpg" alt="Resistente al agua" />
+            <img src="waterproof.jpg" alt="Resistente al agua" />
             <h3>Resistente al agua, polvo y golpes</h3>
             <p>Construido para soportar cualquier clima y proteger tu energía.</p>
           </article>
           <article class="product-card fade-up">
-            <img src="images/charging-multiple.jpg" alt="Carga múltiples dispositivos" />
+            <img src="charging-multiple.jpg" alt="Carga múltiples dispositivos" />
             <h3>Carga hasta 3 dispositivos a la vez</h3>
             <p>Puertos inteligentes para cargar teléfonos, cámaras y más simultáneamente.</p>
           </article>
           <article class="product-card fade-up">
-            <img src="images/specs.jpg" alt="Especificaciones técnicas" />
+            <img class="small" src="specs.jpg" alt="Especificaciones técnicas" />
             <h3>Especificaciones técnicas</h3>
             <p>Indicadores LED, panel solar eficiente y batería de alta densidad.</p>
           </article>
           <article class="product-card fade-up">
-            <img src="images/safety.jpg" alt="Multiprotecciones de seguridad" />
+            <img src="safety.jpg" alt="Multiprotecciones de seguridad" />
             <h3>Multiprotecciones de seguridad</h3>
             <p>Sistemas avanzados contra sobrecarga, sobrecalentamiento y cortocircuitos.</p>
           </article>
           <article class="product-card fade-up">
-            <img src="images/outdoor.jpg" alt="Ideal para camping" />
+            <img src="outdoor.jpg" alt="Ideal para camping" />
             <h3>Ideal para camping y excursiones</h3>
             <p>Compañero perfecto para aventuras al aire libre y viajes prolongados.</p>
           </article>
           <article class="product-card fade-up">
-            <img src="images/dimensions.jpg" alt="Dimensiones y puertos" />
+            <img src="dimensions.jpg" alt="Dimensiones y puertos" />
             <h3>Dimensiones y puertos</h3>
             <p>Diseño compacto con detalles que facilitan su transporte y uso diario.</p>
           </article>
