Fix image paths after merge conflict

--- a/index.html
+++ b/index.html
@@ -93,56 +93,56 @@
 
           <div class="product-grid">
             <article class="product-card" data-animate="fade-up">
-              <img src="solar-charge.jpg" alt="Cargador solar TRY-O recibiendo luz solar" loading="lazy" decoding="async" />
+              <img src="images/solar-charge.jpg" alt="Cargador solar TRY-O recibiendo luz solar" loading="lazy" decoding="async" />
               <div class="product-body">
                 <h3>Carga solar y USB</h3>
                 <p>Aprovecha paneles solares de alto rendimiento o recarga mediante USB-C con carga rápida.</p>
               </div>
             </article>
             <article class="product-card" data-animate="fade-up">
-              <img src="led-light.jpg" alt="Linterna LED doble integrada" loading="lazy" decoding="async" />
+              <img src="images/led-light.jpg" alt="Linterna LED doble integrada" loading="lazy" decoding="async" />
               <div class="product-body">
                 <h3>Linterna LED doble (3 modos)</h3>
                 <p>Ilumina tu camino con modos SOS, intermitente y luz constante, perfectos para emergencias.</p>
               </div>
             </article>
             <article class="product-card" data-animate="fade-up">
-              <img src="waterproof.jpg" alt="Cargador TRY-O expuesto a la lluvia" loading="lazy" decoding="async" />
+              <img src="images/waterproof.jpg" alt="Cargador TRY-O expuesto a la lluvia" loading="lazy" decoding="async" />
               <div class="product-body">
                 <h3>Resistente al agua, polvo y golpes</h3>
                 <p>Construcción sellada con certificación IP65 para soportar climas extremos sin preocupaciones.</p>
               </div>
             </article>
             <article class="product-card" data-animate="fade-up">
-              <img src="charging-multiple.jpg" alt="Cargando múltiples dispositivos" loading="lazy" decoding="async" />
+              <img src="images/charging-multiple.jpg" alt="Cargando múltiples dispositivos" loading="lazy" decoding="async" />
               <div class="product-body">
                 <h3>Carga hasta 3 dispositivos a la vez</h3>
                 <p>Puertos inteligentes USB-A y USB-C con reparto equilibrado de energía.</p>
               </div>
             </article>
             <article class="product-card" data-animate="fade-up">
-              <img class="small" src="specs.jpg" alt="Ficha de especificaciones técnicas" loading="lazy" decoding="async" />
+              <img class="small" src="images/specs.jpg" alt="Ficha de especificaciones técnicas" loading="lazy" decoding="async" />
               <div class="product-body">
                 <h3>Especificaciones técnicas</h3>
                 <p>Panel solar 1.5W, salida USB-C 18W, indicadores LED y batería de litio de alta densidad.</p>
               </div>
             </article>
             <article class="product-card" data-animate="fade-up">
-              <img src="safety.jpg" alt="Sistema de seguridad inteligente" loading="lazy" decoding="async" />
+              <img src="images/safety.jpg" alt="Sistema de seguridad inteligente" loading="lazy" decoding="async" />
               <div class="product-body">
                 <h3>Multiprotecciones de seguridad</h3>
                 <p>Protección activa contra sobrecarga, sobrecalentamiento, cortocircuitos y descarga profunda.</p>
               </div>
             </article>
             <article class="product-card" data-animate="fade-up">
-              <img src="outdoor.jpg" alt="Uso del cargador en camping" loading="lazy" decoding="async" />
+              <img src="images/outdoor.jpg" alt="Uso del cargador en camping" loading="lazy" decoding="async" />
               <div class="product-body">
                 <h3>Ideal para camping y excursiones</h3>
                 <p>Diseño compacto con agarre antideslizante y mosquetón incluido para colgar en tu mochila.</p>
               </div>
             </article>
             <article class="product-card" data-animate="fade-up">
-              <img src="dimensions.jpg" alt="Dimensiones y puertos del cargador" loading="lazy" decoding="async" />
+              <img src="images/dimensions.jpg" alt="Dimensiones y puertos del cargador" loading="lazy" decoding="async" />
               <div class="product-body">
                 <h3>Dimensiones y puertos</h3>
                 <p>Formato de bolsillo con puertos perfectamente alineados y cable incluido.</p>
