--- a/index.html
+++ b/index.html
@@ -127,14 +127,19 @@
     </section>
 
     <!-- Comprar -->
-    <section id="comprar" class="section cta-section">
-      <div class="container">
-        <div class="cta-content fade-up">
-          <h2>Llévalo contigo y nunca te quedes sin batería</h2>
-          <a href="#producto" class="btn btn-accent">Comprar ahora</a>
-        </div>
-      </div>
-    </section>
+   <section id="comprar" class="section cta-section">
+  <div class="container">
+    <div class="cta-content fade-up">
+      <h2>Llévalo contigo y nunca te quedes sin batería</h2>
+
+      <!-- Botón de compra con PayPal -->
+      <a href="https://www.paypal.com/ncp/payment/BQD7YCJP282S4" 
+         class="btn btn-primary" target="_blank">
+         <i class="fa-brands fa-paypal"></i> Comprar con PayPal
+      </a>
+    </div>
+  </div>
+</section>
 
     <!-- Contacto -->
     <section id="contacto" class="section contact-section">
