--- a/index.html
+++ b/index.html
@@ -97,6 +97,52 @@
         </div>
       </div>
     </section>
+    
+<!-- Variantes de color -->
+<section id="colores" class="section color-section">
+  <div class="container">
+    <h2>Elige tu color</h2>
+
+    <!-- Botones de colores -->
+    <div class="color-tabs">
+      <button class="tab-btn active" data-color="azul">
+        <span class="color-swatch" style="background-color:#1e3a8a;"></span> Azul
+      </button>
+      <button class="tab-btn" data-color="naranja">
+        <span class="color-swatch" style="background-color:#f97316;"></span> Naranja
+      </button>
+      <button class="tab-btn" data-color="negro" disabled>
+        <span class="color-swatch out-of-stock" style="background-color:#000;"></span> Negro (Agotado)
+      </button>
+    </div>
+
+    <!-- Imagen del producto -->
+    <div class="color-image">
+      <img id="color-preview" src="images/powerbank-azul.jpg" alt="TRY-O Solar Power Bank Azul">
+    </div>
+
+    <!-- Descripciones -->
+    <div class="color-content">
+      <div class="tab-content active" id="azul">
+        <h3>TRY-O Solar Power Bank – Azul</h3>
+        <p>🌌 Dale un estilo moderno y tecnológico a tu energía portátil. El acabado azul resalta en cualquier aventura y te acompaña con estilo en la ciudad o en la naturaleza.</p>
+        <p><strong>👉 Ideal para quienes buscan funcionalidad y diseño elegante.</strong></p>
+      </div>
+
+      <div class="tab-content" id="naranja">
+        <h3>TRY-O Solar Power Bank – Naranja</h3>
+        <p>🔥 Energía que resalta. El color naranja vibrante no solo te da potencia, también asegura que tu cargador sea fácil de encontrar en mochilas o en la noche.</p>
+        <p><strong>👉 Perfecto para exploradores y campistas que necesitan visibilidad y resistencia.</strong></p>
+      </div>
+
+      <div class="tab-content" id="negro">
+        <h3>TRY-O Solar Power Bank – Negro (Edición Limitada)</h3>
+        <p>⚫ Sobrio y minimalista. El color negro convierte a este power bank en una opción premium y exclusiva.</p>
+        <p><strong>👉 Actualmente agotado, regístrate para enterarte cuando vuelva a estar disponible.</strong></p>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Beneficios -->
     <section id="beneficios" class="section benefits-section">
