--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
       </div>
     </section>
     
-<!-- Variantes de color -->
+<!-- Variantes de color con estilo pro -->
 <section id="colores" class="section color-section">
   <div class="container">
-    <h2>Elige tu color</h2>
+    <h2 class="section-title">Elige tu estilo</h2>
 
     <!-- Botones de colores -->
     <div class="color-tabs">
@@ -116,9 +116,10 @@
       </button>
     </div>
 
-    <!-- Imagen del producto -->
-    <div class="color-image">
+    <!-- Contenedor de imagen + texto dinámico -->
+    <div class="color-display">
       <img id="color-preview" src="images/powerbank-azul.jpg" alt="TRY-O Solar Power Bank Azul">
+      <div id="color-label" class="color-label">Edición Azul</div>
     </div>
 
     <!-- Descripciones -->
@@ -126,19 +127,17 @@
       <div class="tab-content active" id="azul">
         <h3>TRY-O Solar Power Bank – Azul</h3>
         <p>🌌 Dale un estilo moderno y tecnológico a tu energía portátil. El acabado azul resalta en cualquier aventura y te acompaña con estilo en la ciudad o en la naturaleza.</p>
-        <p><strong>👉 Ideal para quienes buscan funcionalidad y diseño elegante.</strong></p>
       </div>
 
       <div class="tab-content" id="naranja">
         <h3>TRY-O Solar Power Bank – Naranja</h3>
-        <p>🔥 Energía que resalta. El color naranja vibrante no solo te da potencia, también asegura que tu cargador sea fácil de encontrar en mochilas o en la noche.</p>
-        <p><strong>👉 Perfecto para exploradores y campistas que necesitan visibilidad y resistencia.</strong></p>
+        <p>🔥 Energía que resalta. El color naranja vibrante asegura que tu cargador sea fácil de encontrar incluso en la oscuridad.</p>
       </div>
 
       <div class="tab-content" id="negro">
         <h3>TRY-O Solar Power Bank – Negro (Edición Limitada)</h3>
-        <p>⚫ Sobrio y minimalista. El color negro convierte a este power bank en una opción premium y exclusiva.</p>
-        <p><strong>👉 Actualmente agotado, regístrate para enterarte cuando vuelva a estar disponible.</strong></p>
+        <p>⚫ Elegante y minimalista. Un diseño exclusivo que transmite poder y sobriedad.</p>
+        <p><strong>👉 Actualmente agotado</strong></p>
       </div>
     </div>
   </div>
