--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
     </div>
   </header>
 
-  <!-- Hero -->
-  <main>
-    <section id="inicio" class="hero">
-      <div class="hero-overlay"></div>
-      <div class="hero-content fade-in">
-        <h1>TRY-O Solar Power Bank</h1>
-        <p>Energía solar portátil para todas tus aventuras</p>
-        <a href="#producto" class="btn btn-primary">Comprar ahora</a>
-      </div>
-    </section>
+<!-- Hero estilo anuncio -->
+<section id="hero" class="hero-ad">
+  <div class="hero-overlay"></div>
+  <div class="hero-container">
+    <h1 id="hero-text">Energía en cualquier lugar ⚡</h1>
+    <a href="#comprar" class="btn btn-accent hero-btn">Comprar ahora</a>
+  </div>
+</section>
 
     <!-- Producto -->
     <section id="producto" class="section product-section">
