--- a/index.html
+++ b/index.html
@@ -1,235 +1,150 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TRY-O Solar Power Bank: cargador solar portátil de 10000mAh ideal para aventuras, con carga solar y USB, resistente al agua y listo para acompañarte." />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TRY-O Solar Power Bank</title>
-
-  <!-- Fuentes y estilos -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-5I9pAFz2uVH54camzatoDtrENcGukdxbYlR5c+3F4iAfDdc0AGJi/7luWGINuD/7++PK5EKeosFVJeI3I+1m0A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Navbar -->
-  <header class="navbar">
-    <div class="container nav-container">
-      <div class="logo">TRY-O</div>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#producto">Producto</a></li>
-          <li><a href="#beneficios">Beneficios</a></li>
-          <li><a href="#comprar">Comprar</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-        </ul>
-      </nav>
-      <button class="menu-toggle" aria-label="Abrir menú">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-    </div>
+  <header>
+    <nav class="navbar">
+      <a href="#hero" class="logo">TRY-O</a>
+      <div class="hamburger" id="hamburger">
+        <span></span><span></span><span></span>
+      </div>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="#producto">Producto</a></li>
+        <li><a href="#beneficios">Beneficios</a></li>
+        <li><a href="#galeria">Galería</a></li>
+        <li><a href="#testimonios">Testimonios</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#comprar">Comprar</a></li>
+        <li><a href="#" id="contact-btn">Contacto</a></li>
+      </ul>
+    </nav>
   </header>
 
-<!-- Hero estilo anuncio -->
-<section id="hero" class="hero-ad">
-  <div class="hero-overlay"></div>
-  <div class="hero-container">
-    <h1 id="hero-text">Energía en cualquier lugar ⚡</h1>
-    <a href="#comprar" class="btn btn-accent hero-btn">Comprar ahora</a>
-  </div>
-</section>
-
-    <!-- Producto -->
-    <section id="producto" class="section product-section">
-      <div class="container">
-        <div class="section-header fade-up">
-          <h2>Cargador Solar 10000mAh</h2>
-          <p>Resistente, portátil y confiable para cualquier aventura</p>
-        </div>
-        <div class="product-grid">
-          <article class="product-card fade-up">
-            <img src="images/solar-charge.jpg" alt="Carga solar y USB" />
-            <h3>Carga solar y USB</h3>
-            <p>Aprovecha la energía del sol o recarga por USB para estar siempre listo.</p>
-          </article>
-          <article class="product-card fade-up">
-            <img src="images/led-light.jpg" alt="Linterna LED doble" />
-            <h3>Linterna LED doble (3 modos)</h3>
-            <p>Iluminación poderosa con modos SOS, intermitente y luz constante.</p>
-          </article>
-          <article class="product-card fade-up">
-            <img src="images/waterproof.jpg" alt="Resistente al agua" />
-            <h3>Resistente al agua, polvo y golpes</h3>
-            <p>Construido para soportar cualquier clima y proteger tu energía.</p>
-          </article>
-          <article class="product-card fade-up">
-            <img src="images/charging-multiple.jpg" alt="Carga múltiples dispositivos" />
-            <h3>Carga hasta 3 dispositivos a la vez</h3>
-            <p>Puertos inteligentes para cargar teléfonos, cámaras y más simultáneamente.</p>
-          </article>
-          <article class="product-card fade-up">
-            <img src="images/specs.jpg" alt="Especificaciones técnicas" />
-            <h3>Especificaciones técnicas</h3>
-            <p>Indicadores LED, panel solar eficiente y batería de alta densidad.</p>
-          </article>
-          <article class="product-card fade-up">
-            <img src="images/safety.jpg" alt="Multiprotecciones de seguridad" />
-            <h3>Multiprotecciones de seguridad</h3>
-            <p>Sistemas avanzados contra sobrecarga, sobrecalentamiento y cortocircuitos.</p>
-          </article>
-          <article class="product-card fade-up">
-            <img src="images/outdoor.jpg" alt="Ideal para camping" />
-            <h3>Ideal para camping y excursiones</h3>
-            <p>Compañero perfecto para aventuras al aire libre y viajes prolongados.</p>
-          </article>
-          <article class="product-card fade-up">
-            <img src="images/dimensions.jpg" alt="Dimensiones y puertos" />
-            <h3>Dimensiones y puertos</h3>
-            <p>Diseño compacto con detalles que facilitan su transporte y uso diario.</p>
-          </article>
-        </div>
-      </div>
-    </section>
-    
-<!-- Variantes de color con estilo pro -->
-<section id="colores" class="section color-section">
-  <div class="container">
-    <h2 class="section-title">Elige tu estilo</h2>
-
-    <!-- Botones de colores -->
-    <div class="color-tabs">
-      <button class="tab-btn active" data-color="azul">
-        <span class="color-swatch" style="background-color:#1e3a8a;"></span> Azul
-      </button>
-      <button class="tab-btn" data-color="naranja">
-        <span class="color-swatch" style="background-color:#f97316;"></span> Naranja
-      </button>
-      <button class="tab-btn" data-color="negro" disabled>
-        <span class="color-swatch out-of-stock" style="background-color:#000;"></span> Negro (Agotado)
-      </button>
+  <!-- Hero -->
+  <section id="hero" class="hero">
+    <div class="hero-content">
+      <h1>TRY-O Solar Power Bank 🔋</h1>
+      <p>Energía en cualquier lugar. Resistente. Confiable. Listo para ti.</p>
+      <a href="#comprar" class="btn btn-accent">Comprar ahora</a>
     </div>
+  </section>
 
-    <!-- Contenedor de imagen + texto dinámico -->
-    <div class="color-display">
-      <img id="color-preview" src="images/powerbank-azul.jpg" alt="TRY-O Solar Power Bank Azul">
-      <div id="color-label" class="color-label">Edición Azul</div>
-    </div>
-
-    <!-- Descripciones -->
-    <div class="color-content">
-      <div class="tab-content active" id="azul">
-        <h3>TRY-O Solar Power Bank – Azul</h3>
-        <p>🌌 Dale un estilo moderno y tecnológico a tu energía portátil. El acabado azul resalta en cualquier aventura y te acompaña con estilo en la ciudad o en la naturaleza.</p>
+  <!-- Características -->
+  <section id="producto" class="section">
+    <h2>Características principales</h2>
+    <div class="features">
+      <div class="feature">
+        <h3>🔋 10000mAh</h3>
+        <p>Carga tus dispositivos varias veces sin preocuparte por quedarte sin batería.</p>
       </div>
-
-      <div class="tab-content" id="naranja">
-        <h3>TRY-O Solar Power Bank – Naranja</h3>
-        <p>🔥 Energía que resalta. El color naranja vibrante asegura que tu cargador sea fácil de encontrar incluso en la oscuridad.</p>
+      <div class="feature">
+        <h3>☀️ Carga solar</h3>
+        <p>Recarga tu power bank con energía solar, ideal para exteriores.</p>
       </div>
-
-      <div class="tab-content" id="negro">
-        <h3>TRY-O Solar Power Bank – Negro (Edición Limitada)</h3>
-        <p>⚫ Elegante y minimalista. Un diseño exclusivo que transmite poder y sobriedad.</p>
-        <p><strong>👉 Actualmente agotado</strong></p>
+      <div class="feature">
+        <h3>🌊 Resistente</h3>
+        <p>Impermeable, a prueba de polvo y golpes: hecho para la aventura.</p>
+      </div>
+      <div class="feature">
+        <h3>💡 Linterna LED</h3>
+        <p>Ilumina tu camino en campamentos o emergencias.</p>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-    <!-- Beneficios -->
-    <section id="beneficios" class="section benefits-section">
-      <div class="container">
-        <div class="benefits-grid">
-          <div class="benefit-item fade-up">
-            <div class="benefit-icon">⚡</div>
-            <h3>10000mAh de capacidad</h3>
-            <p>Energía suficiente para múltiples cargas en cualquier lugar.</p>
-          </div>
-          <div class="benefit-item fade-up">
-            <div class="benefit-icon">☀️</div>
-            <h3>Carga solar y USB</h3>
-            <p>Flexibilidad total para recargar sin importar dónde estés.</p>
-          </div>
-          <div class="benefit-item fade-up">
-            <div class="benefit-icon">🛡️</div>
-            <h3>Resistente y duradero</h3>
-            <p>Materiales premium que soportan golpes y condiciones extremas.</p>
-          </div>
-          <div class="benefit-item fade-up">
-            <div class="benefit-icon">🎒</div>
-            <h3>Portátil y ligero</h3>
-            <p>Llévalo en tu mochila sin sacrificar espacio ni comodidad.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Comprar -->
-   <section id="comprar" class="section cta-section">
-  <div class="container">
-    <div class="cta-content fade-up">
-      <h2>Llévalo contigo y nunca te quedes sin batería</h2>
-
-      <!-- Botón de compra con PayPal -->
-      <a href="https://www.paypal.com/ncp/payment/BQD7YCJP282S4" 
-         class="btn btn-primary" target="_blank">
-         <i class="fa-brands fa-paypal"></i> Comprar con PayPal
-      </a>
+  <!-- Galería -->
+  <section id="galeria" class="section">
+    <h2>Galería del producto</h2>
+    <div class="product-grid">
+      <div class="product-card"><img src="images/backpack.jpg" alt="Portátil y cómodo"></div>
+      <div class="product-card"><img src="images/charging-multiple.jpg" alt="Carga múltiple"></div>
+      <div class="product-card"><img src="images/dimensions.jpg" alt="Compacto"></div>
+      <div class="product-card"><img src="images/led-light.jpg" alt="Linterna LED"></div>
+      <div class="product-card"><img src="images/outdoor.jpg" alt="Perfecto para exteriores"></div>
+      <div class="product-card"><img src="images/safety.jpg" alt="Seguro y confiable"></div>
+      <div class="product-card"><img src="images/solar-charge.jpg" alt="Carga solar"></div>
+      <div class="product-card"><img src="images/specs.jpg" alt="Especificaciones"></div>
+      <div class="product-card"><img src="images/waterproof.jpg" alt="Resistente al agua"></div>
     </div>
-  </div>
-</section>
+  </section>
 
-    <!-- Contacto -->
-    <section id="contacto" class="section contact-section">
-      <div class="container">
-        <div class="contact-card fade-up">
-          <h2>Contacto</h2>
-          <p>¿Tienes dudas o necesitas más información? Escríbenos y te responderemos pronto.</p>
-          <form id="contact-form" novalidate>
-            <div class="form-group">
-              <label for="name">Nombre</label>
-              <input type="text" id="name" name="name" placeholder="Tu nombre" required />
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" placeholder="tunombre@email.com" required />
-            </div>
-            <div class="form-group">
-              <label for="message">Mensaje</label>
-              <textarea id="message" name="message" rows="4" placeholder="Escribe tu mensaje" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-          </form>
-          <p class="form-feedback" aria-live="polite"></p>
-        </div>
+  <!-- Beneficios -->
+  <section id="beneficios" class="section">
+    <h2>¿Por qué elegir TRY-O?</h2>
+    <ul class="benefits">
+      <li>✔️ Energía confiable donde la necesites</li>
+      <li>✔️ Compatible con todos tus dispositivos</li>
+      <li>✔️ Diseño moderno y duradero</li>
+      <li>✔️ Ideal para viajes, campamentos y emergencias</li>
+    </ul>
+  </section>
+
+  <!-- Testimonios -->
+  <section id="testimonios" class="section">
+    <h2>Lo que dicen nuestros clientes</h2>
+    <div class="testimonials">
+      <div class="testimonial">
+        <p>"Me salvó en un viaje de camping. Pude cargar mi celular y mi linterna toda la semana."</p>
+        <span>- Andrea, México</span>
       </div>
-    </section>
-  </main>
+      <div class="testimonial">
+        <p>"Diseño resistente y práctico. Lo llevo en mi mochila todos los días."</p>
+        <span>- Carlos, España</span>
+      </div>
+      <div class="testimonial">
+        <p>"Excelente producto, lo usé en la playa y funcionó perfecto con la energía solar."</p>
+        <span>- Sofía, Chile</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQ -->
+  <section id="faq" class="section">
+    <h2>Preguntas frecuentes</h2>
+    <div class="faq">
+      <div class="faq-item">
+        <h3>¿Cuánto tarda en cargarse por completo?</h3>
+        <p>Con cargador USB tarda entre 4 y 5 horas. Con energía solar depende de la exposición al sol.</p>
+      </div>
+      <div class="faq-item">
+        <h3>¿Es resistente al agua?</h3>
+        <p>Sí, tiene certificación de resistencia al agua y polvo (IPX6).</p>
+      </div>
+      <div class="faq-item">
+        <h3>¿Puedo cargar varios dispositivos a la vez?</h3>
+        <p>Sí, tiene puertos USB duales para cargar dos dispositivos simultáneamente.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA final -->
+  <section id="comprar" class="section cta">
+    <h2>Listo para tu próxima aventura</h2>
+    <p>No te quedes sin energía. Llévate el TRY-O Solar Power Bank hoy.</p>
+    <a href="https://www.paypal.com/ncp/payment/TULINKAQUI" target="_blank" class="btn btn-accent">Comprar con PayPal</a>
+  </section>
 
   <!-- Footer -->
-  <footer class="footer">
-    <div class="container footer-container">
-      <div class="footer-logo">TRY-O</div>
-      <p>© 2025 TRY-O. Todos los derechos reservados.</p>
-      <div class="social-links">
-        <a href="https://www.instagram.com" aria-label="Instagram" target="_blank" rel="noopener">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a href="https://www.facebook.com" aria-label="Facebook" target="_blank" rel="noopener">
-          <i class="fa-brands fa-facebook"></i>
-        </a>
-        <a href="https://www.tiktok.com" aria-label="TikTok" target="_blank" rel="noopener">
-          <i class="fa-brands fa-tiktok"></i>
-        </a>
-      </div>
-    </div>
+  <footer>
+    <p>© 2025 TRY-O. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="script.js" defer></script>
+  <!-- Popup Modal -->
+  <div id="contact-modal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Contacto</h2>
+      <p>📧 contact@try-o.com</p>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
+
